buildscript {
    apply from: './dependencies.gradle'

    repositories {
        jcenter()
        gradlePluginPortal()
        maven { url "https://plugins.gradle.org/m2/" }
        maven { url "https://sandec.bintray.com/repo" }
    }

    dependencies {
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_plugin_version"
        classpath 'com.sandec.jpro:jpro-plugin-gradle:2020.1.3'
        classpath 'org.openjfx:javafx-plugin:0.0.9'
    }
}

plugins {
    // Apply the org.jetbrains.kotlin.jvm Plugin to add support for Kotlin.
    id 'org.jetbrains.kotlin.jvm' version "$kotlin_plugin_version"

    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'org.openjfx.javafxplugin' version "$javafx_plugin_version"
}

apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'kotlin'
apply plugin: 'kotlin-kapt'
apply plugin: 'com.sandec.jpro'

repositories {
    // Use JCenter for resolving dependencies.
    jcenter()

    // TornadoFX 2.0 Snapshot
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
}

dependencies {
    implementation platform('org.jetbrains.kotlin:kotlin-bom')
    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'

    testImplementation 'org.jetbrains.kotlin:kotlin-test'
    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit'

    // Logging
    implementation "org.slf4j:slf4j-api:$slf4j_api_version"

    // TornadoFX
    implementation "no.tornado:tornadofx:$tornadofx_version"

    // JFoenix
    implementation "com.jfoenix:jfoenix:$jfoenix_version"

    // Ikonli
    implementation "org.kordamp.ikonli:ikonli-javafx:$ikonli_version"
    implementation "org.kordamp.ikonli:ikonli-fontawesome-pack:$ikonli_version"
    implementation "org.kordamp.ikonli:ikonli-fontawesome5-pack:$ikonli_version"
    implementation "org.kordamp.ikonli:ikonli-materialdesign-pack:$ikonli_version"
    implementation "org.kordamp.ikonli:ikonli-material-pack:$ikonli_version"
}

group 'org.bibletranslationtools'
mainClassName = 'org.bibletranslationtools.demo.JProApp'

javafx {
    version = "$javafx_version"
    modules = ['javafx.base', 'javafx.graphics', 'javafx.controls', 'javafx.fxml', 'javafx.media', 'javafx.web']
}

run {
    doFirst {
        jvmArgs = [
                '--add-opens', 'javafx.graphics/javafx.scene=tornadofx'
        ]
    }
}

sourceCompatibility = 11

compileKotlin {
    kotlinOptions.jvmTarget = "11"
}

compileTestKotlin {
    kotlinOptions.jvmTarget = "11"
}

jpro {
    // for debugging
    // JVMArgs << '-agentlib:jdwp=transport=dt_socket,server=n,address=5006,suspend=y'

    JVMArgs << '-Xmx1000m'

    //jpro server port
    port = 8080

}
